- Support action link groups to open with click, like actions showing dynamic action link group.
- Open dynamic action link group nested in the menu tree, under the action opening it.
- Add sort_joins to column, defaults to includes value, so it's possible to set sort by SQL without joining the includes, or join with some associations, and preload others.

= 4.1.5
- Fix update_columns global config for field search ac

= 4.1.4
- Fix dirty attributes on refresh_field action, record is built on unsaved instance copying attributes, but it reports only changed attributes from the form now
- Fix incompatibility with Rails renderable objects (ViewComponent, Turbo Streams)

= 4.1.3
- Columns using bitfields are not treated as number columns (e.g. don't get numeric class in list)
- Fix loading tinymce when the form is loaded on page load
- Speed up rendering action link with images, when list is long, image_path can be reused

= 4.1.2
- Call cache_column_counts in get_row, so custom code changing queries to calculate counts is used when a row is refreshed too

= 4.1.1
- Load dartsass-sprockets, so it isn't required in the Gemfile
- Fix refreshing a column in a subform without sending the whole form

= 4.1.0
- Replace sassc-rails with dartsass-sprockets, as it's a compatible replacement, to ease migration to dartsass
- Use lowercase response headers as required by rack 3
- Add filters to list action
- Add prompt option to action link
- Support tabbed_by in show action too
- Support options hash for :add_new option, with mode: :popup to open create new form in a JS popup, and other options to change link texts
- Support setup option in tinymce config with function
- Support multiple values in constraints for columns
- Improve grouped search supporting to change the columns used with group clause
- Improve grouped search to support using virtual columns for calculations, defining which DB column use to calculate